--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "create-react-app": "^5.0.1",
     "react": "^18.3.1",
     "react-router-dom": "^6.26.0"
   }
